@@ -6,5 +6,8 @@ the samples), it is hard to ensure that the field `sample_counter` will contain 
 data at any time, so we simply remove it, leaving it up to the plugin to keep track of the number
 of samples played.
 
-2018-09-14: Rename Voice.sound to Voice.renderable. 
+2018-09-14: Rename `Voice.sound` to `Voice.renderable`. 
 This is more consistent with the name of the data-type, so hopefully more easy to remember.
+
+2018-09-14: Remove field `amplitude_modifier`.
+Same as `sample_counter`: it's hard to ensure that this is indeed updated every sample.
